# PalinDrome

./: .gitignore  LICENSE.txt  PalinDrome.spec  PalindromeChecker.spec  README.md  build.py  pyproject.toml  requirements.txt  run.sh  run_palindrome_checker.sh
src/: main_window.py  main_window.ui
src/app/: main.py  main_window.py
src/app/ui /: main_window.ui
